--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 بترول</font></td>
 <td align="center" width="100" class="emptyCells"></td>
 <td align="center" width="100" class="emptyCells"></td>
-<td align="center" width="100" class="emptyCells"></td>
+<td align="center" width="100" id="td9"><a href="http://std.eng.cu.edu.eg"><img id="img9" src="images/check.gif" border="0" width="23" height="20" style="display: block;"></a></td>
 <td align="center" width="100" class="emptyCells"></td>
 <!-- <td align="center" width="100" id="td52"><a href="http://std.eng.cu.edu.eg"><img id="img52" src="images/check.gif" border="0" width="23" height="20" style="display: block;"></a></td>
       <td align="center" width="100" id="td9"><a href="http://std.eng.cu.edu.eg"><img id="img9" src="images/check.gif" border="0" width="23" height="20" style="display: block;"></a></td>
@@ -98,7 +98,7 @@
       <td align="middle" width="250"><font face="Times New Roman">
 مناجم   </font></td>
 <td align="center" width="100" class="emptyCells"></td>
-<td align="center" width="100" class="emptyCells"></td>
+<td align="center" width="100" id="td9"><a href="http://std.eng.cu.edu.eg"><img id="img9" src="images/check.gif" border="0" width="23" height="20" style="display: block;"></a></td>
 <td align="center" width="100" class="emptyCells"></td>
 <td align="center" width="100" class="emptyCells"></td>
 <!-- <td align="center" width="100" id="td51"><a href="http://std.eng.cu.edu.eg"><img id="img51" src="images/check.gif" border="0" width="23" height="20" style="display: block;"></a></td>
@@ -121,7 +121,7 @@
     <tr>
       <td align="middle" width="250"><font face="Times New Roman">
 طيران &nbsp;</font></td>
-<td align="center" width="100" class="emptyCells"></td>
+<td align="center" width="100" id="td9"><a href="http://std.eng.cu.edu.eg"><img id="img9" src="images/check.gif" border="0" width="23" height="20" style="display: block;"></a></td>
 <td align="center" width="100" class="emptyCells"></td>
 <td align="center" width="100" class="emptyCells"></td>
 <td align="center" width="100" class="emptyCells"></td>
