--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 هندسة الحاسبات &nbsp;</font></td>
 <td align="center" width="100" class="emptyCells"></td>
 <td align="center" width="100" class="emptyCells"></td>
-<td align="center" width="100" class="emptyCells"></td>
+<td align="center" width="100" id="td43"><a href="http://std.eng.cu.edu.eg"><img id="img43" src="images/check.gif" border="0" width="23" height="20" style="display: block;"></a></td>
 <td align="center" width="100" class="emptyCells"></td>
       <!-- <td align="center" width="100" id="td45"><a href="http://std.eng.cu.edu.eg"><img id="img45" src="images/check.gif" border="0" width="23" height="20" style="display: block;"></a></td>
       <td align="center" width="100" id="td46"><a href="http://std.eng.cu.edu.eg"><img id="img46" src="images/check.gif" border="0" width="23" height="20" style="display: block;"></a></td>
@@ -223,8 +223,8 @@
 <td align="center" width="200" colspan="2" id="td49"><a href="http://std.eng.cu.edu.eg"><img id="img49" src="images/check.gif" border="0" width="23" height="20" style="display: block;"></a></td>
 <td align="center" width="200" colspan="2" id="td50"><a href="http://std.eng.cu.edu.eg"><img id="img50" src="images/check.gif" border="0" width="23" height="20" style="display: block;"></a></td>
         -->
-<td align="center" width="100" class="emptyCells"></td>
-<td align="center" width="100" class="emptyCells"></td>
+<td align="center" width="200" colspan="2" id="td50"><a href="http://std.eng.cu.edu.eg"><img id="img50" src="images/check.gif" border="0" width="23" height="20" style="display: block;"></a></td>
+<td align="center" width="200" colspan="2" id="td50"><a href="http://std.eng.cu.edu.eg"><img id="img50" src="images/check.gif" border="0" width="23" height="20" style="display: block;"></a></td>
     </tr>
   </tbody></table><font face="Times New Roman">
 
