--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       <td align="middle" width="250"><font face="Times New Roman">
 الكترونيات</font></td>
 <td align="center" width="100" class="emptyCells"></td>
-<td align="center" width="100" class="emptyCells"></td>
-<td align="center" width="100" class="emptyCells"></td>
+      <td align="center" width="100" id="td3"><a href="http://std.eng.cu.edu.eg"><img id="img3" src="images/check.gif" border="0" width="23" height="20" style="display: block;"></a></td>
+      <td align="center" width="100" id="td3"><a href="http://std.eng.cu.edu.eg"><img id="img3" src="images/check.gif" border="0" width="23" height="20" style="display: block;"></a></td>
 <td align="center" width="100" class="emptyCells"></td>
       <!-- <td align="center" width="100" id="td1"><a href="http://std.eng.cu.edu.eg"><img id="img1" src="images/check.gif" border="0" width="23" height="20" style="display: block;"></a></td>
       <td align="center" width="100" id="td2"><a href="http://std.eng.cu.edu.eg"><img id="img2" src="images/check.gif" border="0" width="23" height="20" style="display: block;"></a></td>
@@ -47,7 +47,7 @@
     <tr>
       <td align="middle" width="250"><font face="Times New Roman">
 كهرباء قوى</font></td>
-<td align="center" width="100" class="emptyCells"></td>
+      <td align="center" width="100" id="td3"><a href="http://std.eng.cu.edu.eg"><img id="img3" src="images/check.gif" border="0" width="23" height="20" style="display: block;"></a></td>
 <td align="center" width="100" class="emptyCells"></td>
 <td align="center" width="100" class="emptyCells"></td>
 <td align="center" width="100" class="emptyCells"></td>
