--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 كهرباء قوى</font></td>
      <td align="center" width="100" class="emptyCells"></td>
 <td align="center" width="100" class="emptyCells"></td>
-<td align="center" width="100" class="emptyCells"></td>
-<td align="center" width="100" class="emptyCells"></td>
+      <td align="center" width="100" id="td6"><a href="http://std.eng.cu.edu.eg"><img id="img6" src="images/check.gif" border="0" width="23" height="20" style="display: block;"></a></td>
+      <td align="center" width="100" id="td6"><a href="http://std.eng.cu.edu.eg"><img id="img6" src="images/check.gif" border="0" width="23" height="20" style="display: block;"></a></td>
 
       <!-- <td align="center" width="100" id="td5"><a href="http://std.eng.cu.edu.eg"><img id="img5" src="images/check.gif" border="0" width="23" height="20" style="display: block;"></a></td>
       <td align="center" width="100" id="td6"><a href="http://std.eng.cu.edu.eg"><img id="img6" src="images/check.gif" border="0" width="23" height="20" style="display: block;"></a></td>
