--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 تعدين</font></td>
 <td align="center" width="100" class="emptyCells"></td>
 <td align="center" width="100" class="emptyCells"></td>
-<td align="center" width="100" class="emptyCells"></td>
-<td align="center" width="100" class="emptyCells"></td>
+      <td align="center" width="100" id="td7"><a href="http://std.eng.cu.edu.eg"><img id="img7" src="images/check.gif" border="0" width="23" height="20" style="display: block;"></a></td>
+      <td align="center" width="100" id="td7"><a href="http://std.eng.cu.edu.eg"><img id="img7" src="images/check.gif" border="0" width="23" height="20" style="display: block;"></a></td>
 
       <!-- <td align="center" width="100" id="td12"><a href="http://std.eng.cu.edu.eg"><img id="img12" src="images/check.gif" border="0" width="23" height="20" style="display: block;"></a></td>
       <td align="center" width="100" class="emptyCells"></td>
@@ -78,7 +78,7 @@
 بترول</font></td>
       <td align="center" width="100" class="emptyCells"></td>
 <td align="center" width="100" class="emptyCells"></td>
-<td align="center" width="100" class="emptyCells"></td>
+      <td align="center" width="100" id="td7"><a href="http://std.eng.cu.edu.eg"><img id="img7" src="images/check.gif" border="0" width="23" height="20" style="display: block;"></a></td>
 <td align="center" width="100" class="emptyCells"></td>
 
 <!-- <td align="center" width="100" id="td52"><a href="http://std.eng.cu.edu.eg"><img id="img52" src="images/check.gif" border="0" width="23" height="20" style="display: block;"></a></td>
@@ -105,7 +105,7 @@
 <td align="center" width="100" class="emptyCells"></td>
 <td align="center" width="100" class="emptyCells"></td>
 <td align="center" width="100" class="emptyCells"></td>
-<td align="center" width="100" class="emptyCells"></td>
+      <td align="center" width="100" id="td7"><a href="http://std.eng.cu.edu.eg"><img id="img7" src="images/check.gif" border="0" width="23" height="20" style="display: block;"></a></td>
 
 <!-- <td align="center" width="100" id="td51"><a href="http://std.eng.cu.edu.eg"><img id="img51" src="images/check.gif" border="0" width="23" height="20" style="display: block;"></a></td>
       <td align="center" width="100" id="td36"><a href="http://std.eng.cu.edu.eg"><img id="img36" src="images/check.gif" border="0" width="23" height="20" style="display: block;"></a></td>
@@ -116,8 +116,8 @@
       <td align="middle" width="250"><font face="Times New Roman"><font face="Times New Roman">
       طبية</font></font></td>
      <td align="center" width="100" class="emptyCells"></td>
-<td align="center" width="100" class="emptyCells"></td>
-<td align="center" width="100" class="emptyCells"></td>
+      <td align="center" width="100" id="td7"><a href="http://std.eng.cu.edu.eg"><img id="img7" src="images/check.gif" border="0" width="23" height="20" style="display: block;"></a></td>
+      <td align="center" width="100" id="td7"><a href="http://std.eng.cu.edu.eg"><img id="img7" src="images/check.gif" border="0" width="23" height="20" style="display: block;"></a></td>
 <td align="center" width="100" class="emptyCells"></td>
 
 
